# inventory-api

./: .dockerignore  .gitignore  Dockerfile  README.md  SETUP_GUIDE.md  docker-compose.yml  heroku.yml  postman_collection.json  pyproject.toml
.github/workflows/: ci.yml
app/: database.py  main.py
app/api/: products.py
app/models/: __init__.py  product.py
prometheus/: prometheus.yml
scripts/: setup-ssh-key.sh
terraform/: .gitignore  main.tf  user_data.sh  variables.tf
tests/: conftest.py  test_products.py
